@@ -29,6 +29,9 @@ SDL 1.2.12 is a minor bug fix release.
 	Added SDL_VIDEO_ALLOW_SCREENSAVER to override SDL's disabling of the screensaver on Mac OS X, Windows, and X11.
 </P>
 <P>
+	Added SDL_BUTTON_WHEELLEFT (6) and SDL_BUTTON_WHEELRIGHT (7)
+</P>
+<P>
 	Fixed buffer overrun crash when resampling audio rates.
 </P>
 <P>
